# audio-algorithms

./: .cmake-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO  simultion.py  test.py
.github/workflows/: unittest.yml
cmake/: CMakeLists.txt
cmake/conf/: barebonesBuilder.in  toolchain_gen2.cmake  toolchain_gen3b.cmake  toolchain_gen3l.cmake  toolchain_gen3m.cmake  toolchain_gen3s.cmake  toolchain_gen4c.cmake  toolchain_gen4l.cmake  toolchain_gen4l_hard.cmake  toolchain_gen4s.cmake  toolchain_gen4v.cmake  toolchain_linaro_gen4l.cmake  toolchain_x86.cmake
cmake/utils/: add_external_directory.cmake  apply_patch.sh  compile  cross-compile-libsndfile.sh  debug.cmake  (+8 more)
modules/: CMakeLists.txt
modules/alarm_detection/: CMakeLists.txt
modules/alarm_detection/include/: alarm_detector.h  co_detector.h  goertzel.h  smoke_detector.h
modules/alarm_detection/src/: co_detector.cpp  goertzel.cpp  smoke_detector.cpp
modules/audio_events/: CMakeLists.txt
modules/audio_events/include/: alarm_detector.h  audio_event_type.h  audio_events.h  co_detector.h  countdown.h  goertzel.h  loudness_detector.h  observer.h  smoke_detector.h
modules/audio_events/src/: co_detector.cpp  countdown.cpp  goertzel.cpp  loudness_detector.cpp  observer.cpp  smoke_detector.cpp
modules/audio_utils/: CMakeLists.txt
modules/audio_utils/include/: audio_utils.h  biquad.h  comfort_noise.h  equalizer.h  gain.h  highpass.h  lowpass.h  ring_buffer.h  tone_generator.h
modules/audio_utils/python/: chebyshev.py  comfort_noise.py  filter_design.py
modules/audio_utils/src/: biquad.cpp  comfort_noise.cpp  equalizer.cpp  ring_buffer.cpp  tone_generator.cpp
modules/audio_utils/test/: CMakeLists.txt  test_biquad.cpp  test_comfort_noise.cpp  test_equalizer.cpp  test_gain.cpp  test_highpass.cpp  test_lowpass.cpp  test_ring_buffer.cpp  tone_generator.cpp
modules/click_removal/: CMakeLists.txt  click_removal.py
modules/click_removal/include/: biquad.h  click_removal.h  frame.h  ring_buffer.h
modules/click_removal/python/: click_removal.py  filter_design.py
modules/click_removal/src/: biquad.cpp  biquad.h  click_removal.cpp  frame.cpp  frame.h  ring_buffer.cpp  ring_buffer.h
modules/click_removal/test/: CMakeLists.txt  test_biquad.cpp  test_frame.cpp  test_ring_buffer.cpp
modules/compressor/: CMakeLists.txt
modules/compressor/doc/: compute_curve.py
modules/compressor/include/: compressor.h
modules/compressor/src/: compressor.c
modules/compressor/test/: CMakeLists.txt  test_compressor.cpp
modules/formant_shift/: CMakeLists.txt
modules/formant_shift/include/: formantInterpolate.h  formant_shift.h  overlapAdd.h  pffftwrap.h  utils.h
modules/formant_shift/src/: formantInterpolate.cpp  formant_shift.cpp  overlapAdd.cpp  pffftwrap.cpp
modules/mic_array/: CMakeLists.txt
modules/mic_array/include/: MicArray.h
modules/mic_array/src/: AutoGainCtrl.c  AutoGainCtrl.h  Beamformer.c  Beamformer.h  Biquad.c  Biquad.h  CepstrumVAD.c  CepstrumVAD.h  MicArray.c  MicArray_Internal.h  NoiseReduce.c  NoiseReduce.h  SoundLocater.c  SoundLocater.h  SpecFlatVAD.c  SpecFlatVAD.h  basic_op.c  basic_op.h  cmatrix.c  cmatrix.h  fftwrap.c  fftwrap.h  predefine.h
modules/mic_array/src/backup/: Beamformer.c.bak  Debugger.c.bak  MemMgr.c.bak  MemMgr.h.bak
modules/mic_array/test/: CMakeLists.txt  test_Beamfomer.cpp  test_CepstrumVAD.cpp  test_NoiseReduce.cpp  test_SoundLocator.cpp  test_cmatrix.cpp  test_mic_array.cpp
modules/pffft/: CMakeLists.txt
modules/pffft-git/: CMakeLists.txt
modules/pffft/include/: pffftwrap.h
modules/pffft/src/: pffftwrap.cpp
modules/soundtouch/: CMakeLists.txt  soundtouch.patch  soundtouch_config.h
modules/speech_enhance/: CMakeLists.txt
modules/speech_enhance/include/: SpeechEnhance.h  basic_def.h
modules/speech_enhance/src/: AutoGainCtrl.c  AutoGainCtrl.h  Beamformer.c  Beamformer.h  CepstrumVAD.c  CepstrumVAD.h  ConstTable.c  NoiseReduce.c  NoiseReduce.h  SoundLocater.c  SoundLocater.h  SpecFlatVAD.c  SpecFlatVAD.h  SpeechEnhance.c  SpeechEnhance_Internal.h  basic_op.c  basic_op.h  cmatrix.c  cmatrix.h  fftwrap.c  fftwrap.h
modules/speech_enhance/src/backup/: Debugger.h.bak
modules/speech_enhance/test/: test_detect_utils.cpp  uiv_fft.cpp
modules/speexdsp-builder/: CMakeLists.txt  build-speexdsp.sh
modules/speexdsp-builder/patches/: 100-fastNS_fxAGC.patch
modules/test/: CMakeLists.txt
modules/test/gtest/: CMakeLists.txt.in
modules/ubnt_logger/: CMakeLists.txt
modules/ubnt_logger/include/ubnt_logger/: log.h  ubnt_logger.h
modules/ubnt_logger/src/: log.c
modules/version/: audio_version.cpp.in  audio_version.h  version.cpp.in  version.h
samples/: CMakeLists.txt
samples/clear_voice/: CMakeLists.txt
samples/clear_voice/src/: bmp.h  config.txt  main.c
samples/clear_voice/src/backup/: Test_AutoGainCtrl.back  Test_AutoGainCtrl_WebRTC.back  Test_Beamformer.back  Test_CepstrumVAD.back  Test_FFT.back  Test_NoiseReduce.back
samples/drc_compressor/: CMakeLists.txt  config.json
samples/drc_compressor/src/: main.cpp
samples/equalizer/: CMakeLists.txt  config.json
samples/equalizer/src/: main.cpp
samples/formant_shifter/: CMakeLists.txt
samples/formant_shifter/src/: main.cpp
samples/resampler/: CMakeLists.txt
samples/resampler/src/: resampler.cpp
samples/tone_generator/: CMakeLists.txt
samples/tone_generator/src/: main.cpp
samples/ui_alarm_detection/: CMakeLists.txt
samples/ui_alarm_detection/src/: sample_alarm_detection.cpp
samples/ui_athena/: CMakeLists.txt  config.json  default_aec.json  default_ns.json
samples/ui_athena/src/: main.cpp
samples/ui_audio_events/: CMakeLists.txt
samples/ui_audio_events/src/: sample_audio_events.cpp
samples/ui_click_remover/: CMakeLists.txt
samples/ui_click_remover/src/: ui_click_remover.cpp
samples/ui_sample_app/: CMakeLists.txt  config.json
samples/ui_sample_app/src/: main.cpp
samples/ui_speexdsp/: CMakeLists.txt  config.json
samples/ui_speexdsp/src/: config.cpp  config.h  ui_speexdsp.cpp
scripts/: batch_speexdsp.sh  install.sh
unittest/: audio_event_eval.py
(+5 files in other folders)
